Changes regarding local work

--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,7 @@ Freizeitkarte-Entwicklung/sea/index.txt.gz
 Freizeitkarte-Entwicklung/sea/version.txt
 Freizeitkarte-Entwicklung/install/*
 Freizeitkarte-Entwicklung/work/*
+Freizeitkarte-Entwicklung/style/opentopomap/*
+Freizeitkarte-Entwicklung/TYP/OpenTopoMap.txt
+
 
